--- a/config.example.json
+++ b/config.example.json
@@ -14,5 +14,6 @@
   "MISSED_BLOCKS_THRESHOLD":2,
   "INTERVAL":20,
   "USE_SMS_ALERT":"ENABLED",
+  "SMS_PROVIDER": "nexmo|twilio",
   "SEND_AFTER_EVERY_MISSED":"ENABLED"
 }
